@@ -131,24 +131,28 @@ public class PolarHsrParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 67);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 152);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 0);
         assertEquals (Math.round(exercise.getSampleList ()[0].getSpeed () * 10), 230);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (24*120*1000, exercise.getSampleList ()[24].getTimestamp());
         assertEquals (exercise.getSampleList ()[24].getHeartRate (), (short) 165);
         assertEquals (exercise.getSampleList ()[24].getAltitude (), (short) 0);
         assertEquals (Math.round(exercise.getSampleList ()[24].getSpeed () * 10), 270);
         assertEquals (exercise.getSampleList ()[24].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[24].getDistance (), 16500);
         
+        assertEquals (48*120*1000, exercise.getSampleList ()[48].getTimestamp());
         assertEquals (exercise.getSampleList ()[48].getHeartRate (), (short) 164);
         assertEquals (exercise.getSampleList ()[48].getAltitude (), (short) 0);
         assertEquals (Math.round(exercise.getSampleList ()[48].getSpeed () * 10), 190);
         assertEquals (exercise.getSampleList ()[48].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[48].getDistance (), 32933);
         
+        assertEquals (66*120*1000, exercise.getSampleList ()[66].getTimestamp());
         assertEquals (exercise.getSampleList ()[66].getHeartRate (), (short) 161);
         assertEquals (exercise.getSampleList ()[66].getAltitude (), (short) 0);
         assertEquals (Math.round(exercise.getSampleList ()[66].getSpeed () * 10), 210);
@@ -250,24 +254,28 @@ public class PolarHsrParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 119);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 143);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getSpeed(), 0f, 0f);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (44*30*1000, exercise.getSampleList ()[44].getTimestamp());
         assertEquals (exercise.getSampleList ()[44].getHeartRate (), (short) 151);
         assertEquals (exercise.getSampleList ()[44].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[44].getSpeed(), 0f, 0f);
         assertEquals (exercise.getSampleList ()[44].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[44].getDistance (), 0);
         
+        assertEquals (88*30*1000, exercise.getSampleList ()[88].getTimestamp());
         assertEquals (exercise.getSampleList ()[88].getHeartRate (), (short) 153);
         assertEquals (exercise.getSampleList ()[88].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[88].getSpeed(), 0f, 0f);
         assertEquals (exercise.getSampleList ()[88].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[88].getDistance (), 0);
         
+        assertEquals (118*30*1000, exercise.getSampleList ()[118].getTimestamp());
         assertEquals (exercise.getSampleList ()[118].getHeartRate (), (short) 140);
         assertEquals (exercise.getSampleList ()[118].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[118].getSpeed(), 0f, 0f);
