@@ -124,24 +124,28 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 1163);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 109);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (240*5*1000, exercise.getSampleList ()[240].getTimestamp());
         assertEquals (exercise.getSampleList ()[240].getHeartRate (), (short) 160);
         assertEquals (exercise.getSampleList ()[240].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[240].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[240].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[240].getDistance (), 0);
         
+        assertEquals (480*5*1000, exercise.getSampleList ()[480].getTimestamp());
         assertEquals (exercise.getSampleList ()[480].getHeartRate (), (short) 161);
         assertEquals (exercise.getSampleList ()[480].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[480].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[480].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[480].getDistance (), 0);
         
+        assertEquals (1162*5*1000, exercise.getSampleList ()[1162].getTimestamp());
         assertEquals (exercise.getSampleList ()[1162].getHeartRate (), (short) 159);
         assertEquals (exercise.getSampleList ()[1162].getAltitude (), (short) 0);
         assertEquals (exercise.getSampleList ()[1162].getSpeed (), 0f, 0f);
@@ -260,24 +264,28 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (295, exercise.getSampleList ().length);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals ((short) 101, exercise.getSampleList ()[0].getHeartRate ());
         assertEquals ((short) 240, exercise.getSampleList ()[0].getAltitude ());
         assertEquals (42, Math.round (exercise.getSampleList ()[0].getSpeed () * 10));
         assertEquals ((short) 0, exercise.getSampleList ()[0].getCadence ());
         assertEquals (0, exercise.getSampleList ()[0].getDistance ());
         
+        assertEquals (100*15*1000, exercise.getSampleList ()[100].getTimestamp());
         assertEquals ((short) 147, exercise.getSampleList ()[100].getHeartRate ());
         assertEquals ((short) 278, exercise.getSampleList ()[100].getAltitude ());
         assertEquals (171, Math.round (exercise.getSampleList ()[100].getSpeed () * 10));
         assertEquals ((short) 0, exercise.getSampleList ()[100].getCadence ());
         assertEquals (9479, exercise.getSampleList ()[100].getDistance ());
         
+        assertEquals (200*15*1000, exercise.getSampleList ()[200].getTimestamp());
         assertEquals ((short) 166, exercise.getSampleList ()[200].getHeartRate ());
         assertEquals ((short) 275, exercise.getSampleList ()[200].getAltitude ());
         assertEquals (141, Math.round (exercise.getSampleList ()[200].getSpeed () * 10));
         assertEquals ((short) 0, exercise.getSampleList ()[200].getCadence ());
         assertEquals (19256, exercise.getSampleList ()[200].getDistance ());
         
+        assertEquals (294*15*1000, exercise.getSampleList ()[294].getTimestamp());
         assertEquals ((short) 123, exercise.getSampleList ()[294].getHeartRate ());
         assertEquals ((short) 229, exercise.getSampleList ()[294].getAltitude ());
         assertEquals (0, Math.round (exercise.getSampleList ()[294].getSpeed () * 10));
@@ -397,24 +405,28 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 206);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 83);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 221);
         assertEquals (Math.round (exercise.getSampleList ()[0].getSpeed () * 10), 0*10);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (100*15*1000, exercise.getSampleList ()[100].getTimestamp());
         assertEquals (exercise.getSampleList ()[100].getHeartRate (), (short) 124);
         assertEquals (exercise.getSampleList ()[100].getAltitude (), (short) 270);
         assertEquals (Math.round (exercise.getSampleList ()[100].getSpeed () * 10), 350);
         assertEquals (exercise.getSampleList ()[100].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[100].getDistance (), 9972);
         
+        assertEquals (200*15*1000, exercise.getSampleList ()[200].getTimestamp());
         assertEquals (exercise.getSampleList ()[200].getHeartRate (), (short) 138);
         assertEquals (exercise.getSampleList ()[200].getAltitude (),(short)  242);
         assertEquals (Math.round (exercise.getSampleList ()[200].getSpeed () * 10), 291);
         assertEquals (exercise.getSampleList ()[200].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[200].getDistance (), 20451);
         
+        assertEquals (205*15*1000, exercise.getSampleList ()[205].getTimestamp());
         assertEquals (exercise.getSampleList ()[205].getHeartRate (), (short) 113);
         assertEquals (exercise.getSampleList ()[205].getAltitude (), (short) 239);
         assertEquals (Math.round (exercise.getSampleList ()[205].getSpeed () * 10), 0);
@@ -505,24 +517,28 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 170);
+        assertEquals (0*15*1000, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 91);
         assertEquals (exercise.getSampleList ()[0].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (100*15*1000, exercise.getSampleList ()[100].getTimestamp());
         assertEquals (exercise.getSampleList ()[100].getHeartRate (), (short) 149);
         assertEquals (exercise.getSampleList ()[100].getAltitude (), (short) 98);
         assertEquals (exercise.getSampleList ()[100].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[100].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[100].getDistance (), 0);
         
+        assertEquals (150*15*1000, exercise.getSampleList ()[150].getTimestamp());
         assertEquals (exercise.getSampleList ()[150].getHeartRate (), (short) 142);
         assertEquals (exercise.getSampleList ()[150].getAltitude (), (short) 89);
         assertEquals (exercise.getSampleList ()[150].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[150].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[150].getDistance (), 0);
         
+        assertEquals (169*15*1000, exercise.getSampleList ()[169].getTimestamp());
         assertEquals (exercise.getSampleList ()[169].getHeartRate (), (short) 147);
         assertEquals (exercise.getSampleList ()[169].getAltitude (), (short) 88);
         assertEquals (exercise.getSampleList ()[169].getSpeed (), 0f, 0f);
@@ -630,24 +646,28 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 3720);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 81);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 219);
         assertEquals (Math.round (exercise.getSampleList ()[0].getSpeed () * 10), 0*10);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (1020*5*1000, exercise.getSampleList ()[1020].getTimestamp());
         assertEquals (exercise.getSampleList ()[1020].getHeartRate (), (short) 134);
         assertEquals (exercise.getSampleList ()[1020].getAltitude (), (short) 190);
         assertEquals (Math.round (exercise.getSampleList ()[1020].getSpeed () * 10), 246);
         assertEquals (exercise.getSampleList ()[1020].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[1020].getDistance (), 30927);
         
+        assertEquals (2880*5*1000, exercise.getSampleList ()[2880].getTimestamp());
         assertEquals (exercise.getSampleList ()[2880].getHeartRate (), (short) 131);
         assertEquals (exercise.getSampleList ()[2880].getAltitude (), (short) 276);
         assertEquals (Math.round (exercise.getSampleList ()[2880].getSpeed () * 10), 383);
         assertEquals (exercise.getSampleList ()[2880].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[2880].getDistance (), 79820);
         
+        assertEquals (3719*5*1000, exercise.getSampleList ()[3719].getTimestamp());
         assertEquals (exercise.getSampleList ()[3719].getHeartRate (), (short) 123);
         assertEquals (exercise.getSampleList ()[3719].getAltitude (), (short) 243);
         assertEquals (Math.round (exercise.getSampleList ()[3719].getSpeed () * 10), 54);
@@ -747,23 +767,27 @@ public class PolarSRawParserTest {
         
         // check sample data (first, two from middle and last only)
         assertEquals (exercise.getSampleList ().length, 1789);
+        assertEquals (0, exercise.getSampleList ()[0].getTimestamp());
         assertEquals (exercise.getSampleList ()[0].getHeartRate (), (short) 76);
         assertEquals (exercise.getSampleList ()[0].getAltitude (), (short) 274);
         assertEquals (exercise.getSampleList ()[0].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[0].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[0].getDistance (), 0);
         
+        assertEquals (720*5*1000, exercise.getSampleList ()[720].getTimestamp());
         assertEquals (exercise.getSampleList ()[720].getHeartRate (), (short) 125);
         assertEquals (exercise.getSampleList ()[720].getAltitude (), (short) 202);
         assertEquals (exercise.getSampleList ()[720].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[720].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[720].getDistance (), 0);
         
+        assertEquals (1440*5*1000, exercise.getSampleList ()[1440].getTimestamp());
         assertEquals (exercise.getSampleList ()[1440].getAltitude (), (short) 143);
         assertEquals (exercise.getSampleList ()[1440].getSpeed (), 0f, 0f);
         assertEquals (exercise.getSampleList ()[1440].getCadence (), (short) 0);
         assertEquals (exercise.getSampleList ()[1440].getDistance (), 0);
         
+        assertEquals (1788*5*1000, exercise.getSampleList ()[1788].getTimestamp());
         assertEquals (exercise.getSampleList ()[1788].getHeartRate (), (short) 86);
         assertEquals (exercise.getSampleList ()[1788].getAltitude (), (short) 281);
         assertEquals (exercise.getSampleList ()[1788].getSpeed (), 0f, 0f);
